# ots_hw_8_duplicate

./: CMakeLists.txt  Doxyfile  README.md  annotated.html  classDuplicateSearcher-members.html  classDuplicateSearcher.html  classes.html  common_8h_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_3ee47e6a3f6bb14d23b8780f671b7068.html  dir_3ee47e6a3f6bb14d23b8780f671b7068_dep.map  dir_3ee47e6a3f6bb14d23b8780f671b7068_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  duplicate__search_8h_source.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  md_README.html  pages.html  serch__params_8h_source.html  structFileParams-members.html  structFileParams.html  structFileParams_1_1Hash-members.html  structFileParams_1_1Hash.html  structSearchParams-members.html  structSearchParams.html  version_8h_source.html
.github/workflows/: doxygen-gh-pages.yml  release.yml
lib/version_lib/: CMakeLists.txt  version.cpp  version_define.h.in
search/: all_2.js  all_4.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  command_handler.h  common.h  duplicate_search.cpp  duplicate_search.h  log_users.h  main.cpp  observer.h  serch_params.h
test/: CMakeLists.txt  tests.cpp
